--- a/www/index.html
+++ b/www/index.html
@@ -16,38 +16,38 @@
       //
       // If your app does not use browser,
       // you can comment out this code.
-      plugin.google.maps.environment.setEnv({
-        'API_KEY_FOR_BROWSER_RELEASE': '(YOUR_API_KEY_IS_HERE)',
-        'API_KEY_FOR_BROWSER_DEBUG': ''
-      });
+//       plugin.google.maps.environment.setEnv({
+//         'API_KEY_FOR_BROWSER_RELEASE': '(YOUR_API_KEY_IS_HERE)',
+//         'API_KEY_FOR_BROWSER_DEBUG': ''
+//       });
 
       // Create a Google Maps native view under the map_canvas div.
       var map = plugin.google.maps.Map.getMap(div);
 
       // If you click the button, do something...
-      var button = document.getElementById("button");
-      button.addEventListener("click", function() {
+//       var button = document.getElementById("button");
+//       button.addEventListener("click", function() {
 
-        // Move to the position with animation
-        map.animateCamera({
-          target: {lat: 37.422359, lng: -122.084344},
-          zoom: 17,
-          tilt: 60,
-          bearing: 140,
-          duration: 5000
-        });
+//         // Move to the position with animation
+//         map.animateCamera({
+//           target: {lat: 37.422359, lng: -122.084344},
+//           zoom: 17,
+//           tilt: 60,
+//           bearing: 140,
+//           duration: 5000
+//         });
 
-        // Add a maker
-        var marker = map.addMarker({
-          position: {lat: 37.422359, lng: -122.084344},
-          title: "Welecome to \n" +
-                 "Cordova GoogleMaps plugin for iOS,Android and Browser!",
-          snippet: "This plugin is awesome!",
-          animation: plugin.google.maps.Animation.BOUNCE
-        });
+//         // Add a maker
+//         var marker = map.addMarker({
+//           position: {lat: 37.422359, lng: -122.084344},
+//           title: "Welecome to \n" +
+//                  "Cordova GoogleMaps plugin for iOS,Android and Browser!",
+//           snippet: "This plugin is awesome!",
+//           animation: plugin.google.maps.Animation.BOUNCE
+//         });
 
-        // Show the info window
-        marker.showInfoWindow();
+//         // Show the info window
+//         marker.showInfoWindow();
 
       });
 
