--- a/www/index.html
+++ b/www/index.html
@@ -16,10 +16,10 @@
       //
       // If your app does not use browser,
       // you can comment out this code.
-      plugin.google.maps.environment.setEnv({
-        'API_KEY_FOR_BROWSER_RELEASE': '(YOUR_API_KEY_IS_HERE)',
-        'API_KEY_FOR_BROWSER_DEBUG': ''
-      });
+//       plugin.google.maps.environment.setEnv({
+//         'API_KEY_FOR_BROWSER_RELEASE': '(YOUR_API_KEY_IS_HERE)',
+//         'API_KEY_FOR_BROWSER_DEBUG': ''
+//       });
 
       // Create a Google Maps native view under the map_canvas div.
       var map = plugin.google.maps.Map.getMap(div);
