--- a/www/index.html
+++ b/www/index.html
@@ -38,16 +38,16 @@
         });
 
         // Add a maker
-        var marker = map.addMarker({
-          position: {lat: 37.422359, lng: -122.084344},
-          title: "Welecome to \n" +
-                 "Cordova GoogleMaps plugin for iOS,Android and Browser!",
-          snippet: "This plugin is awesome!",
-          animation: plugin.google.maps.Animation.BOUNCE
-        });
+//         var marker = map.addMarker({
+//           position: {lat: 37.422359, lng: -122.084344},
+//           title: "Welecome to \n" +
+//                  "Cordova GoogleMaps plugin for iOS,Android and Browser!",
+//           snippet: "This plugin is awesome!",
+//           animation: plugin.google.maps.Animation.BOUNCE
+//         });
 
-        // Show the info window
-        marker.showInfoWindow();
+//         // Show the info window
+//         marker.showInfoWindow();
 
       });
 
