--- a/www/index.html
+++ b/www/index.html
@@ -29,13 +29,13 @@
       button.addEventListener("click", function() {
 
         // Move to the position with animation
-        map.animateCamera({
-          target: {lat: 37.422359, lng: -122.084344},
-          zoom: 17,
-          tilt: 60,
-          bearing: 140,
-          duration: 5000
-        });
+//         map.animateCamera({
+//           target: {lat: 37.422359, lng: -122.084344},
+//           zoom: 17,
+//           tilt: 60,
+//           bearing: 140,
+//           duration: 5000
+//         });
 
         // Add a maker
 //         var marker = map.addMarker({
