--- a/www/index.html
+++ b/www/index.html
@@ -25,8 +25,8 @@
       var map = plugin.google.maps.Map.getMap(div);
 
       // If you click the button, do something...
-      var button = document.getElementById("button");
-      button.addEventListener("click", function() {
+//       var button = document.getElementById("button");
+//       button.addEventListener("click", function() {
 
         // Move to the position with animation
 //         map.animateCamera({
@@ -49,7 +49,7 @@
 //         // Show the info window
 //         marker.showInfoWindow();
 
-      });
+//      });
 
     }, false);
 
