--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 
       // Create a Google Maps native view under the map_canvas div.
       var map = plugin.google.maps.Map.getMap(div);
-
+      console.log(map);
       // If you click the button, do something...
 //       var button = document.getElementById("button");
 //       button.addEventListener("click", function() {
