--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
     document.addEventListener("deviceready", function() {
       var div = document.getElementById("map_canvas");
-
+      console.log(div);
       // If your app runs this program on browser,
       // you need to set `API_KEY_FOR_BROWSER_RELEASE` and `API_KEY_FOR_BROWSER_DEBUG`
       // before `plugin.google.maps.Map.getMap()`
